Fix channels label size and alignment

--- a/src/Sylius/Bundle/AdminBundle/Resources/private/sass/main.scss
+++ b/src/Sylius/Bundle/AdminBundle/Resources/private/sass/main.scss
@@ -13,3 +13,21 @@
 .text.gray {
     color: #999;
 }
+
+.channel {
+    display: inline-flex;
+    align-items: baseline;
+    flex-wrap: nowrap;
+
+    .channel__item {
+        white-space: nowrap;
+    }
+
+    .channel__item.label {
+        transform: translateY(1px);
+    }
+
+    .channel__item:not(:last-child) {
+        margin-right: 8px;
+    }
+}
